# mercury

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
config/: default.toml  dev.toml
frontend/src/: main.html  main.ts
frontend/src/api/: index.ts  raw-response.ts  response.ts  socket.ts
frontend/src/components/: App.tsx  EmailDetailsView.tsx  EmailList.tsx  EmailListItem.tsx  EmailListView.tsx  EmailWithSidebarView.tsx
frontend/src/util/: email.ts
mail/: Cargo.toml
mail/src/: header.rs  lib.rs  parser.rs
mail/src/header/: name.rs  parser.rs  parts.rs  typed.rs
mail/src/header/parser/: address.rs  optional.rs
mail/src/header/parts/: address.rs
mail/src/header/typed/: from.rs  sender.rs  subject.rs  to.rs
mercury/: Cargo.toml
mercury-smtp/: Cargo.toml
mercury-smtp/src/: lib.rs
mercury-storage/: Cargo.toml
mercury-storage/src/: error.rs  lib.rs  mail.rs  sqlite.rs
mercury-storage/src/sqlite/: migrations.rs
mercury-tests/: Cargo.toml
mercury-tests/data/: email.txt
mercury-tests/src/: email.rs  test.rs
mercury-web/: Cargo.toml
mercury-web/src/: api.rs  lib.rs
mercury-web/src/api/: listen.rs
mercury/src/: main.rs
rusqlite-async/: Cargo.toml
rusqlite-async/src/: lib.rs
smtp-server/: Cargo.toml
smtp-server/src/: conn.rs  error.rs  lib.rs  session.rs
smtp-server/src/session/: cmd.rs  reply.rs
web/src/: main.html
web/src/components/: App.tsx  EmailListView.tsx  EmailWithSidebarView.tsx
