[package]
name = "mercury-smtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtp-server = { path = "../smtp-server" }
anyhow = "1"
serde = { version = "1", default-features = false, features = ["std", "derive"] }