[package]
name = "mercury-smtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtp-server = { path = "../smtp-server" }
mail = { path = "../mail" }
anyhow = "1"
serde = { version = "1", default-features = false, features = ["std", "derive"] }
storage = { path = "../mercury-storage", package = "mercury-storage" }
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
async-compression = { version = "0.3", default-features = false, features = ["tokio", "gzip"] }