[package]
name = "mercury-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28", default-features = false, features = ["bundled", "trace", "time", "uuid"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
thiserror = { version = "1" }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
time = { version = "0.3", default-features = false, features = ["std"] }
crossbeam = { version = "0.8", default-features = false, features = ["std", "crossbeam-channel"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
mail = { path = "../mail" }