[package]
name = "rusqlite-async"
version = "0.1.0"
edition = "2021"

[features]
modern-full = ["rusqlite/modern-full"]
bundled-sqlcipher-vendored-openssl = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
bundled-full = ["rusqlite/bundled-full"]
csvtab = ["rusqlite/csvtab"]
in_gecko = ["rusqlite/in_gecko"]
bundled = ["rusqlite/bundled"]
bundled-sqlcipher = ["rusqlite/bundled-sqlcipher"]
session = ["rusqlite/session"]
window = ["rusqlite/window"]
modern_sqlite = ["rusqlite/modern_sqlite"]
with-asan = ["rusqlite/with-asan"]
trace = ["rusqlite/trace"]
vtab = ["rusqlite/vtab"]
wasm32-wasi-vfs = ["rusqlite/wasm32-wasi-vfs"]
backup = ["rusqlite/backup"]
sqlcipher = ["rusqlite/sqlcipher"]
series = ["rusqlite/series"]
winsqlite3 = ["rusqlite/winsqlite3"]
functions = ["rusqlite/functions"]
unlock_notify = ["rusqlite/unlock_notify"]
release_memory = ["rusqlite/release_memory"]
array = ["rusqlite/array"]
bundled-windows = ["rusqlite/bundled-windows"]
buildtime_bindgen = ["rusqlite/buildtime_bindgen"]
blob = ["rusqlite/blob"]
load_extension = ["rusqlite/load_extension"]
collation = ["rusqlite/collation"]
column_decltype = ["rusqlite/column_decltype"]
serde_json = ["rusqlite/serde_json"]
i128_blob = ["rusqlite/i128_blob"]
csv = ["rusqlite/csv"]
url = ["rusqlite/url"]
extra_check = ["rusqlite/extra_check"]
limits = ["rusqlite/limits"]
time = ["rusqlite/time"]
chrono = ["rusqlite/chrono"]
hooks = ["rusqlite/hooks"]
lazy_static = ["rusqlite/lazy_static"]
uuid = ["rusqlite/uuid"]

[dependencies]
rusqlite = "0.28"

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync"]